bug(navbar): adjusted path-visibility when hovering, mainly css

--- a/.aw/app/css/components/navigation.css
+++ b/.aw/app/css/components/navigation.css
@@ -11,16 +11,25 @@
 }
 
 .navigation-bar--header {
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
     color: #fff;
     overflow: hidden;
 }
 
+.root-directory-path{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 1rem 2rem;
+    border-radius: 20px;
+}
+
 .navigation-bar--header:hover {
+    z-index: 998;
     overflow: visible;
+}
+
+.navigation-bar--header:hover .root-directory-snippet {
+    z-index: 999;
 }
 
 .root-directory-snippet {
@@ -28,14 +37,20 @@
     flex-direction: row;
     align-items: center;
     background-color: #1D3557;
+    padding: 10px 0;
 }
 
 .root-directory-snippet > * {
-    padding: 0 .2rem;
+    padding: 0 .3rem;
 }
 
 .root-directory-snippet--text {
     white-space: nowrap;
+}
+
+.root-directory-path:last-child {
+    padding-right: 20px;
+    border-radius: 40px;
 }
 
 .labels{
